fixed spacing for jen info in front page, spacing for special deals in front page, padding for quote form

--- a/css/pages/_quote-page.scss
+++ b/css/pages/_quote-page.scss
@@ -38,9 +38,6 @@
   &.step-1 {
     padding: 3rem 1.5rem 4rem;
     transition: padding 0.3s ease-in-out;
-    @media screen and (min-width: 950px) {
-      padding-bottom: 0;
-    }
   }
 
   &.step-2 {
